third_party/move/move-compiler-v2/tests/lambda/storable/simplifier_func.exp

Diagnostics:
warning: Unused local variable `f`. Consider removing or prefixing with an underscore: `_f`
  ┌─ tests/lambda/storable/simplifier_func.move:7:13
  │
7 │         let f = |x: u64| { let t = S { x: 3 }; x };
  │             ^

warning: Unused local variable `t`. Consider removing or prefixing with an underscore: `_t`
  ┌─ tests/lambda/storable/simplifier_func.move:7:32
  │
7 │         let f = |x: u64| { let t = S { x: 3 }; x };
  │                                ^

// -- Model dump before bytecode pipeline
module 0x42::mod1 {
    struct S {
        x: u64,
    }
    public fun triple(x: u64): u64 {
        {
          let f: |u64|u64 with copy+store = |x: u64| {
            let t: S = pack mod1::S(3);
            x
          };
          Mul<u64>(x, 3)
        }
    }
} // end 0x42::mod1

// -- Sourcified model before bytecode pipeline
module 0x42::mod1 {
    struct S {
        x: u64,
    }
    public fun triple(x: u64): u64 {
        let f = |x| {
            let t = S{x: 3};
            x
        };
        x * 3
    }
}


Diagnostics:
error: Function-typed values not yet supported except as arguments to inline function calls.
  ┌─ tests/lambda/storable/simplifier_func.move:7:17
  │
7 │         let f = |x: u64| { let t = S { x: 3 }; x };
  │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
